--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mantine/dates": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
     "dayjs": "^1.11.8",
+    "lord-icon-element": "^4.1.1",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0"
