--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.13",
     "@mantine/dates": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
+    "@tabler/icons-react": "^2.23.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "lord-icon-element": "^4.1.1",
